dist_man1_MANS=

if BUILD_KARMACOIND
  dist_man1_MANS+=karmacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=karmacoin-qt.1
endif

if BUILD_KARMACOIN_CLI
  dist_man1_MANS+=karmacoin-cli.1
endif

if BUILD_KARMACOIN_TX
  dist_man1_MANS+=karmacoin-tx.1
endif

if ENABLE_WALLET
if BUILD_KARMACOIN_WALLET
  dist_man1_MANS+=karmacoin-wallet.1
endif
endif
